# LSAP

./: .gitignore  CMakeLists.txt  LSAP.cpp  LSAP.h  README.md  build.py  main.cpp  preprocessor.cpp
file_inputs/: OR-Library.txt  assign600.txt  assign700.txt  assignopt.txt  assignp1500.txt  assignp3000.txt  assignp5000.txt  assignp800.txt  basic_test.txt  example_2.txt  example_3.txt  exampleopt.txt
include/: LSAP.h  Preprocess.h  Tests.h  Types.h  Utils.h
old/: LSAP2.cpp  LSAP2.h  main2.cpp
src/: Hungarian_SP.cpp  Hungarian_n3.cpp  Hungarian_n4.cpp  Hungarian_v2.cpp  LSAP.cpp  LSAP_old.cpp  Preprocess.cpp  Tests.cpp  Utils.cpp  test_suite.cpp
